# trace-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: basic.rs
src/: error.rs  event.rs  lib.rs  linux.rs  macos.rs  unix.rs
src/arch/: aarch64.rs  mod.rs
src/linux/: registers.rs  syscall.rs  tracee.rs  tracer.rs
src/macos/: exceptions.rs  memory.rs  tracee.rs  tracer.rs
trace-helper/: Cargo.toml
trace-helper/src/: macos.rs
trace-rs/: Cargo.toml  build.rs
trace-rs/src/: breakpoint.rs  error.rs  event.rs  lib.rs  linux.rs  windows.rs
trace-rs/src/arch/: x86_64.rs
trace-rs/src/linux/: memory.rs  syscall.rs  tracee.rs  tracer.rs
trace-rs/src/macos/: exceptions.rs  registers.rs  structs.rs  tracee.rs  tracer.rs
