[package]
name = "trace-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
mmap-rs = "0.5"
thiserror = "1"

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1"

[target.'cfg(target_os = "linux")'.dependencies]
syscalls = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = { git = "https://github.com/JohnTitor/mach2" }

[target.'cfg(unix)'.dependencies]
nix = "0.26"

[target.'cfg(windows)'.dependencies]
widestring = "1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.44"
features = [
	"Win32_Foundation",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_Kernel",
	"Win32_System_SystemServices",
	"Win32_System_Threading",
	"Win32_System_WindowsProgramming",
]
